fix: api url version mismatches
